--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
-
+#
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -18,8 +18,7 @@ test:
   pool: 5
   timeout: 5000
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+default: &default
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
